JumpScript/tests/baselines/reference/concatClassAndString.errors.txt
tests/cases/compiler/concatClassAndString.jump(4,1): error TS2539: Cannot assign to 'f' because it is not a variable.


==== tests/cases/compiler/concatClassAndString.jump (1 errors) ====
    // Shouldn't compile (the long form f = f + ""; doesn't):
    class f { }
    
    f += '';
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    